[SELC-9033] feat(product-ms): fix jacoco params